Modal: Fix scrolling for overflowing modals (#810)

--- a/scss/component/_modal.scss
+++ b/scss/component/_modal.scss
@@ -12,7 +12,8 @@
         display: none;
         width: 100%;
         height: 100%;
-        overflow: hidden;
+        overflow-x: hidden;
+        overflow-y: auto;
         direction: ltr #{"/*rtl:ignore*/"};
         // Prevent Chrome on Windows from adding a focus outline. For details, see
         // https://github.com/twbs/bootstrap/pull/10951.
